Fixed to allow for loading from jar files and properly handle %2F entries in font url.
git-svn-id: http://ardorlabs.svn.cvsdude.com/Ardor3Dv1/trunk@332 82abaa13-a93f-4eff-8987-b3ae9fc18050